<b><u> v2.11, 15.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Fixed the empty space on unitframes after install. Finally, thanks goes to Benik. :)
<font color=#FF8C00>&#9830;</font> "Maybe" fixed a nil error in changelog.
<font color=#FF8C00>&#9830;</font> More work on the ObjectivTracker skin.
<font color=#FF8C00>&#9830;</font> More work on the Quest skin
<font color=#FF8C00>&#9830;</font> Update settings in install.
<font color=#FF8C00>&#9830;</font> If you visit the Auction House, the bags should be open/close automatically.
<font color=#FF8C00>&#9830;</font> Enable tooltip scanning for bags in my install. It cost more resources, so if you experience performance issues turn it off in the Bags settings.
<font color=#FF8C00>&#9830;</font> Adjust the width of the changelog.

<b><u> v2.10, 10.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Overhaul the install process for AddOns.
<font color=#FF8C00>&#9830;</font> Some tweaks to the Layouts.
<font color=#FF8C00>&#9830;</font> Fix a nil error if BenikUI is not loaded.
<font color=#FF8C00>&#9830;</font> Add hearthstone position to the LocPanel menu.
<font color=#FF8C00>&#9830;</font> Skin progressBars in ObjectiveTracker skin.

<b><u> v2.09, 08.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Change the default position of the Changelog.
<font color=#FF8C00>&#9830;</font> Fix lua error in install.

<b><u> v2.08, 07.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add tabs for professions on the TradeSkill Frame.
<font color=#FF8C00>&#9830;</font> Add a few CVars to the chat install.
<font color=#FF8C00>&#9830;</font> Return of the skin for Scenario/Proving Ground.
<font color=#FF8C00>&#9830;</font> Add new SLE settings for Guild/Friends DT's.

<b><u> v2.07, 02.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Add a new Heal Layout to the install process (WIP). Inspired by insertuseralias.
<font color=#FF8C00>&#9830;</font> Install: Adjust the ActionBar Layout for DPS-Layout.